# pymnifocus

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
scripts/: test_mcp_client.py
src/pymnifocus/: __init__.py  __main__.py  applescript_gen.py  cli.py  omnifocus.py  query_generator.py  server.py
src/pymnifocus/scripts/: getPerspectiveView.js  listPerspectives.js  listTags.js  omnifocusDump.js
tests/: conftest.py  test_integration.py  test_validation.py
