[project]
name = "pymnifocus"
version = "1.0.0"
description = "OmniFocus MCP server and CLI tool for macOS task management with AI assistants"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Vincent Danen" },
]
keywords = ["omnifocus", "mcp", "task-management", "macos", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp[cli]>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/vdanen/pymnifocus"
Repository = "https://github.com/vdanen/pymnifocus"
Issues = "https://github.com/vdanen/pymnifocus/issues"

[project.scripts]
pymnifocus-server = "pymnifocus.server:main"
pymnifocus-query = "pymnifocus.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pymnifocus"]

[dependency-groups]
dev = [
    "pytest>=9.0",
    "ruff>=0.15",
    "build>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
